tweak aabb & geometry

--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Fri Jun 14 12:45:40 2013 +0800
+% Date: Fri Jun 14 19:29:17 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -70,6 +70,13 @@
   \centering
   \includegraphics[scale=0.4]{res/face.png}
   \caption{\label{fig:face}}
+\end{figure}
+
+\item 实现了obj格式读取及基本的渲染,绘制出了一个红色小人.
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.4]{res/human.png}
+  \caption{\label{fig:human}}
 \end{figure}
 
 
