--- a/report/refs.bib
+++ b/report/refs.bib
@@ -50,3 +50,13 @@
   year={2005},
   organization={ACM}
 }
+
+
+@inproceedings{kdtree,
+  title={On building fast kd-trees for ray tracing, and on doing that in O (N log N)},
+  author={Wald, Ingo and Havran, Vlastimil},
+  booktitle={Interactive Ray Tracing 2006, IEEE Symposium on},
+  pages={61--69},
+  year={2006},
+  organization={IEEE}
+}
