--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Fri Jun 14 19:29:17 2013 +0800
+% Date: Sat Jun 15 16:53:27 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -78,6 +78,14 @@
   \includegraphics[scale=0.4]{res/human.png}
   \caption{\label{fig:human}}
 \end{figure}
+
+\item 实现了KDTree, 可以开始渲染更大的obj.
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.4]{res/flower.png}
+  \caption{\label{fig:flower}}
+\end{figure}
+
 
 
 \end{enumerate}
