--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Sat Jun 15 16:53:27 2013 +0800
+% Date: Mon Jun 17 19:58:29 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -84,6 +84,22 @@
   \centering
   \includegraphics[scale=0.4]{res/flower.png}
   \caption{\label{fig:flower}}
+\end{figure}
+
+\item 按照\cite{kdtree}优化了KDTree的实现之后发现如下左图所示bug, 调试很久后发现两个原因.
+  一是建树时选取候选切割平面未偏移\verb|EPS|, 二是包围盒求交存在小bug,少了一个绝对值运算.
+  其中第二个bug还严重影响了速度.
+\begin{figure}[H]
+  \centering
+\begin{minipage}[b]{0.46\linewidth}
+  \centering
+  \includegraphics[width=\textwidth]{res/bug_teapot.png}
+\end{minipage}
+\begin{minipage}[b]{0.46\linewidth}
+  \centering
+  \includegraphics[width=\textwidth]{res/fixed_teapot.png}
+\end{minipage}
+  \caption{\label{fig:kdtree_bug}}
 \end{figure}
 
 
