fix about transmission

--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Tue Jun 18 17:36:36 2013 +0800
+% Date: Tue Jun 18 20:21:27 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -142,6 +142,13 @@
 \end{minipage}
   \caption{\label{fig:soft}}
 \end{figure}
+
+\item 发现球与地面接触处有密集的小斑点,调试后发现是由于球底部与平面略微重合,求交时有时会出错.
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.4]{res/smallpoint.png}
+\end{figure}
+
 
 
 
