--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Tue Jun 18 20:21:27 2013 +0800
+% Date: Wed Jun 19 09:39:35 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -147,6 +147,13 @@
 \begin{figure}[H]
   \centering
   \includegraphics[scale=0.4]{res/smallpoint.png}
+\end{figure}
+
+\item 加入了景深效果,在感光器处随机取了20个伪视点,效率也相应降低了20倍,效果如图所示
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.4]{res/dof.png}
+  \caption{\label{fig:dof}}
 \end{figure}
 
 
