--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Wed Jun 19 09:39:35 2013 +0800
+% Date: Wed Jun 19 13:54:27 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -156,6 +156,8 @@
   \caption{\label{fig:dof}}
 \end{figure}
 
+\item 由于\verb|std::shared_ptr<T>|的默认构造函数会对引用计数和指针对象进行两次内存分配,效率不够高.大量换用\verb|std::make_share<T>|后
+  光线追踪时间缩短了25\%.
 
 
 
