--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Wed Jun 19 13:54:27 2013 +0800
+% Date: Wed Jun 19 14:06:34 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -143,6 +143,8 @@
   \caption{\label{fig:soft}}
 \end{figure}
 
+\item 加入了抗锯齿效果,分别用FSAA与CFAA,能看出变化但效果不明显。
+
 \item 发现球与地面接触处有密集的小斑点,调试后发现是由于球底部与平面略微重合,求交时有时会出错.
 \begin{figure}[H]
   \centering
@@ -156,8 +158,8 @@
   \caption{\label{fig:dof}}
 \end{figure}
 
-\item 由于\verb|std::shared_ptr<T>|的默认构造函数会对引用计数和指针对象进行两次内存分配,效率不够高.大量换用\verb|std::make_share<T>|后
-  光线追踪时间缩短了25\%.
+\item 由于\verb|std::shared_ptr<T>|的默认构造函数会对引用计数和指针对象进行两次内存分配,效率不够高.
+  大量换用\verb|std::make_share<T>|后光线追踪时间缩短了40\%.
 
 
 
