--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 % $File: report.tex
-% $Date: Fri Apr 05 17:00:27 2013 +0800
+% $Date: Thu Jun 20 01:34:33 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
@@ -73,8 +73,12 @@ basicstyle=\footnotesize\ttfamily}
 %\end{abstract}
 
 \input{title}
-%\titleformat*{\section}{\centering\Large\bf}
-\input{diary.tex}
+\titleformat*{\section}{\centering\Large\bf}
+
+\input{intro}
+\input{algo}
+\input{proj}
+\input{diary}
 \printbibliography
 
 \end{document}
