--- a/report/report.tex
+++ b/report/report.tex
@@ -1,11 +1,12 @@
 % $File: report.tex
-% $Date: Thu Jun 20 01:34:33 2013 +0800
+% $Date: Thu Jun 20 20:24:15 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
 
 \usepackage{fontspec,amsmath,amssymb,zhspacing,verbatim,minted,listings,zhmath}
 \usepackage{titlesec, titletoc}
+\usepackage{threeparttable}
 \usepackage{enumerate}
 \usepackage[hyperfootnotes=false,colorlinks,linkcolor=blue,anchorcolor=blue,citecolor=blue]{hyperref}
 \usepackage[sorting=none]{biblatex}
