--- a/report/title.tex
+++ b/report/title.tex
@@ -1,5 +1,5 @@
 % File: title.tex
-% Date: Fri Apr 05 17:00:28 2013 +0800
+% Date: Thu Jun 20 18:49:41 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 
 \newcommand{\HUGE}{\fontsize{29pt}{29pt}\selectfont}
@@ -20,10 +20,10 @@
 
 % Title
 
-\hspace{3cm}{ \HUGE \bfseries 光线追踪}\\[0.4cm]
+\hspace{3cm}{ \HUGE \bfseries 光线追踪及网格简化}\\[0.4cm]
 
 
-\hspace{3cm} {\huge \bfseries 实验报告}
+\hspace{3cm} {\huge \bfseries 作业文档}
 
 \end{flushleft}
 
