--- a/report/refs.bib
+++ b/report/refs.bib
@@ -2,61 +2,38 @@
 	title ={Wikipedia page for Beer-Lambert Law},
 	url ={http://en.wikipedia.org/wiki/Beer-Lambert_law}
 }
+@ONLINE{triangle,
+	title ={Ray-triangle intersection},
+	author={Brian Curless}
+	url ={http://www.cs.washington.edu/education/courses/cse457/09au/lectures/triangle_intersection.pdf}
+}
+
+@ONLINE{triangle_code,
+	title={Lighthouse3d Page for Ray-Triangle Intersection},
+	url={http://www.lighthouse3d.com/tutorials/maths/ray-triangle-intersection/}
+
+}
 
 @ONLINE{phong,
 	title ={Wikipedia page for Phong Reflection Model},
 	url ={http://en.wikipedia.org/wiki/Phong_reflection_model}
 }
-@booklet{tsinghua-choose,
-	title={清华大学选课管理实施办法},
-	year={2008}
-}
-
-@booklet{tsinghua-ban,
-	title={清华大学学生违纪处分管理规定实施细则},
-	year={2008},
-	note={第六章}
-}
-
-@book{network-flow,
-	author={Ravindra K. Ahuja and Thomas L. Magnanti and James B. Orlin},
-	title={Network Flows: Theory, Algorithms, and Applications},
-	publisher={Pearson Education Asia Ltd},
-	year={1993}
-}
-
-@book{example,
-	author={刘汝佳，黄亮},
-	title={算法艺术与信息学竞赛},
-	publisher={清华大学出版社},
-	year={2004}
-}
-
-
-@book{algorithms,
-	title={Introduction to Algorithms},
-	edition={2},
-	year={2001},
-	author={Cormen, T.H.},
-	publisher={The MIT press}
-}
-
 
 @inproceedings{aabb,
-  title={An efficient and robust ray-box intersection algorithm},
-  author={Williams, Amy and Barrus, Steve and Morley, R Keith and Shirley, Peter},
-  booktitle={ACM SIGGRAPH 2005 Courses},
-  pages={9},
-  year={2005},
-  organization={ACM}
+	title={An efficient and robust ray-box intersection algorithm},
+	author={Williams, Amy and Barrus, Steve and Morley, R Keith and Shirley, Peter},
+	booktitle={ACM SIGGRAPH 2005 Courses},
+	pages={9},
+	year={2005},
+	organization={ACM}
 }
 
 
 @inproceedings{kdtree,
-  title={On building fast kd-trees for ray tracing, and on doing that in O (N log N)},
-  author={Wald, Ingo and Havran, Vlastimil},
-  booktitle={Interactive Ray Tracing 2006, IEEE Symposium on},
-  pages={61--69},
-  year={2006},
-  organization={IEEE}
+	title={On building fast kd-trees for ray tracing, and on doing that in O (N log N)},
+	author={Wald, Ingo and Havran, Vlastimil},
+	booktitle={Interactive Ray Tracing 2006, IEEE Symposium on},
+	pages={61--69},
+	year={2006},
+	organization={IEEE}
 }
