--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Thu Jun 20 21:21:07 2013 +0800
+% Date: Thu Jun 20 23:30:17 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 \begin{enumerate}
@@ -11,7 +11,7 @@
 \begin{figure}[H]
   \centering
   \includegraphics[scale=0.4]{img/first_pic.png}
-  \caption*{\label{fig:first}}
+  \caption{\label{fig:first}}
 \end{figure}
 
 \item
@@ -21,7 +21,7 @@
 \begin{figure}[H]
   \centering
   \includegraphics[scale=0.4]{img/plane_with_beer.png}
-  \caption*{\label{fig:beer}}
+  \caption{\label{fig:beer}}
 \end{figure}
 
 \item
@@ -140,7 +140,7 @@
   \centering
   \includegraphics[width=\textwidth]{img/soft.png}
 \end{minipage}
-  \caption*{\label{fig:soft}}
+  \caption{\label{fig:soft}}
 \end{figure}
 
 \item 加入了抗锯齿效果,分别用FSAA与CFAA,能看出变化但效果不明显。
