--- a/report/refs.bib
+++ b/report/refs.bib
@@ -4,7 +4,7 @@
 }
 @ONLINE{triangle,
 	title ={Ray-triangle intersection},
-	author={Brian Curless}
+	author={Brian Curless},
 	url ={http://www.cs.washington.edu/education/courses/cse457/09au/lectures/triangle_intersection.pdf}
 }
 
