about to test simplify

--- a/report/algo.tex
+++ b/report/algo.tex
@@ -1,5 +1,5 @@
 % File: algo.tex
-% Date: Fri Jun 21 00:24:09 2013 +0800
+% Date: Fri Jun 21 01:11:16 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{算法说明}
 \subsection{光线追踪及光照模型}
@@ -122,21 +122,51 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 
 \subsection{软阴影}
 对场景中每一点光源,将其替换为点周围的多个密集点光源以模拟面光源的效果,
-即可实现软阴影.
-效果如\figref{soft}所示. 实现见\verb|Space::add_light()|.
+即可实现软阴影.效果如\figref{soft}所示. 实现见\verb|Space::add_light()|.
 
 \subsection{景深}
 程序中景深的实现方法为,以焦平面作为屏幕,取焦平面与视点之间某处建一感光器平面.
 对视点到焦平面的每条光线,取其与感光器的交点,在交点周围随机采多个样本点向
-屏幕同一位置发射光线并执行光线追踪
+屏幕同一位置发射光线并执行光线追踪,以各样本平均值作为最终颜色.
+这样就可以使得焦平面上物体清晰,而其余位置模糊.
 
+\verb|main.cc|中的\verb|dof_ball_scene()|生成一个演示景深的场景,场景中
+可通过键盘控制焦平面位置,详见\secref{navigate}.demo目录中有景深的演示视频.
 
 \subsection{小量处理}
-有如下情形需要考虑实数运算中的误差.
-考虑光线斜射平面的情形,
-反射+EPS,
+在如下情形需要特别注意实数运算中的误差.
+\begin{enumerate}
+    \item 反射折射的交点误差可能导致光线异常.
+
+      考虑光线斜射平面的情形,若交点由于误差落在了平面异侧,则反射光仍会打到平面,
+      若落在了平面同侧,则透射光仍会打到平面.因而计算反射光线时,
+      应将其起始点回退EPS,计算透射光线时,应将其起始点前进EPS.
+
+      \item 平行判定
+
+        判定直线与面片或平面是否平行时,利用向量点乘绝对值$<$EPS判定,
+        否则可能导致交点坐标出现无穷大.
+
+    \item KD树
+
+      建树时,对于包围盒相交的判定应略微宽松,与包围盒距离$<$EPS的物体都应归入包围盒管理,
+      查询时对光线与面片求交也可判的宽松一些,否则渲染的图片中容易出现黑点.
+
+      对面片求包围盒时应注意最小值应减去EPS,最大值应加上EPS,
+      否则可能出现0体积包围盒,影响算法实现.
+\end{enumerate}
 
 \subsection{网格简化}
+网格的坍缩简化算法参考\cite{mesh}实现.
+基本思路是,对每对顶点估算出简化代价,每次选取代价最小的顶点对执行简化操作,操作后更新相关的代价值.
+
+由于算法具有优先队列结构,因此使用了\verb|std::priority_queue|进行堆加速.
+但由于需要执行堆元素修改操作,因而对堆结构进行了如下处理:
+
+对每个顶点,维护它相邻顶点中最适合坍缩的顶点指针.
+堆元素存储一顶点指针及它与相应邻点的坍缩代价,另有一时间戳.
+堆元素按照坍缩代价保持堆性质,坍缩一对顶点后更新了附近顶点的最优代价,就将新的值打上新的时间戳压入堆中,
+而取堆顶元素时,若发现其不是最新就抛弃.这样就可以替代修改操作.
 
 \subsection{多线程}
 \begin{enumerate}
