--- a/report/refs.bib
+++ b/report/refs.bib
@@ -37,3 +37,13 @@
 	year={2006},
 	organization={IEEE}
 }
+
+@article{mesh,
+  title={A simple, fast, and effective polygon reduction algorithm},
+  author={Melax, Stan},
+  journal={Game Developer},
+  volume={5},
+  number={11},
+  pages={44--49},
+  year={1998}
+}
