--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 % $File: report.tex
-% $Date: Thu Jun 20 20:24:15 2013 +0800
+% $Date: Fri Jun 21 00:53:42 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
@@ -27,7 +27,7 @@ basicstyle=\footnotesize\ttfamily}
 \pagestyle{fancy}
 \setlength{\headheight}{15.2pt}
 \lhead[]{}\rhead[]{}
-\fancyhead[C]{\emph{光线追踪实验报告}}
+\fancyhead[C]{\emph{图形学大作业报告}}
 
 
 %use cell in tabular
