--- a/report/algo.tex
+++ b/report/algo.tex
@@ -1,5 +1,5 @@
 % File: algo.tex
-% Date: Fri Jun 21 01:11:16 2013 +0800
+% Date: Fri Jun 21 02:11:20 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{算法说明}
 \subsection{光线追踪及光照模型}
@@ -41,7 +41,7 @@ $ \overrightarrow{V}$为视点到表面交点处的向量.
     为了性能,与光线的求交参考了\cite{triangle, triangle_code}的算法及实现,其基本思想是求解满足
     方程
     \[  \overrightarrow{Orig} + t * \overrightarrow{Dir} = x * \overrightarrow{v_1} + y  \overrightarrow{v_2} + (1 - x -
-    y)\overrightarrow{v_3}, t > 0, x, y \in (0, 1), x + y \le 1\]
+      y)\overrightarrow{v_3}, t > 0, x, y \in (0, 1), x + y \le 1\]
     的$ (t, x, y)$, 在求交时同时能得到交点的重心坐标\footnote{\url{https://en.wikipedia.org/wiki/Barycentric\_coordinate\_system}}
     ,便于之后进行法向插值.见\verb|include/renderable/face.hh, renderable/face.cc|
 
@@ -92,6 +92,8 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 
 由表可见SAH建树的查询效率有很大提高,但建树缓慢. 建树效率与渲染效率之间存在trade-off,可以通过改变终止条件来调整.
 
+另外,不使用KD树时,视角1渲染时间约为800s.(不使用KD树时各像素所需时间大致相同,可由此估算总时间).
+
 \subsubsection{求交}
 求交的基本方法为,递归寻找两子树的最近\underline{物体}的交点,取较近者为结果返回.
 
@@ -109,9 +111,18 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 对于平面,采用平面上的二维欧式坐标. 球体采用其极坐标.
 网格未支持二维纹理,仅可以使用均匀纹理.
 
+\subsection{法向插值}
+\label{sec:smooth}
+法向插值可以使三角网格表面更光滑,只需找到一个面片上的连续函数,就可以得到较好的效果.
+此程序采用了线性插值.
+
+在读入网格数据后,令各点法向为其相邻各面法向的平均.
+在面片与光线求交后,根据交点的重心坐标即可利用面片顶点的法向插值出交点法向.
+效果见\figref{smooth}, \figref{simplify}.
+
 \subsection{抗锯齿}
 \begin{enumerate}
-  \item 使用Beer-Lambert定律,使得光想亮度按传播距离指数衰减,可以有效消除远处纹理密集处的畸形.
+  \item 使用Beer-Lambert定律\cite{beer},使得光想亮度按传播距离指数衰减,可以有效消除远处纹理密集处的畸形.
     见\figref{first}与\figref{beer}的对比.
 
   \item 使用全屏抗锯齿(FSAA),对图片整体应用卷积盒$\begin{bmatrix}1 & 2 & 1\\2 & 4 & 2\\1 & 2 & 1\end{bmatrix} $,
@@ -121,11 +132,13 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 \end{enumerate}
 
 \subsection{软阴影}
+\label{sec:soft}
 对场景中每一点光源,将其替换为点周围的多个密集点光源以模拟面光源的效果,
 即可实现软阴影.效果如\figref{soft}所示. 实现见\verb|Space::add_light()|.
 
 \subsection{景深}
-程序中景深的实现方法为,以焦平面作为屏幕,取焦平面与视点之间某处建一感光器平面.
+程序中景深\footnote\url{http://en.wikipedia.org/wiki/Depth\_of\_field}
+的实现方法为,以焦平面作为屏幕,取焦平面与视点之间某处建一感光器平面.
 对视点到焦平面的每条光线,取其与感光器的交点,在交点周围随机采多个样本点向
 屏幕同一位置发射光线并执行光线追踪,以各样本平均值作为最终颜色.
 这样就可以使得焦平面上物体清晰,而其余位置模糊.
@@ -136,24 +149,24 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 \subsection{小量处理}
 在如下情形需要特别注意实数运算中的误差.
 \begin{enumerate}
-    \item 反射折射的交点误差可能导致光线异常.
+  \item 反射折射的交点误差可能导致光线异常.
 
-      考虑光线斜射平面的情形,若交点由于误差落在了平面异侧,则反射光仍会打到平面,
-      若落在了平面同侧,则透射光仍会打到平面.因而计算反射光线时,
-      应将其起始点回退EPS,计算透射光线时,应将其起始点前进EPS.
+    考虑光线斜射平面的情形,若交点由于误差落在了平面异侧,则反射光仍会打到平面,
+    若落在了平面同侧,则透射光仍会打到平面.因而计算反射光线时,
+    应将其起始点回退EPS,计算透射光线时,应将其起始点前进EPS.
 
-      \item 平行判定
+  \item 平行判定
 
-        判定直线与面片或平面是否平行时,利用向量点乘绝对值$<$EPS判定,
-        否则可能导致交点坐标出现无穷大.
+    判定直线与面片或平面是否平行时,利用向量点乘绝对值$<$EPS判定,
+    否则可能导致交点坐标出现无穷大.
 
-    \item KD树
+  \item KD树
 
-      建树时,对于包围盒相交的判定应略微宽松,与包围盒距离$<$EPS的物体都应归入包围盒管理,
-      查询时对光线与面片求交也可判的宽松一些,否则渲染的图片中容易出现黑点.
+    建树时,对于包围盒相交的判定应略微宽松,与包围盒距离$<$EPS的物体都应归入包围盒管理,
+    查询时对光线与面片求交也可判的宽松一些,否则渲染的图片中容易出现黑点.
 
-      对面片求包围盒时应注意最小值应减去EPS,最大值应加上EPS,
-      否则可能出现0体积包围盒,影响算法实现.
+    对面片求包围盒时应注意最小值应减去EPS,最大值应加上EPS,
+    否则可能出现0体积包围盒,影响算法实现.
 \end{enumerate}
 
 \subsection{网格简化}
@@ -166,9 +179,20 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 对每个顶点,维护它相邻顶点中最适合坍缩的顶点指针.
 堆元素存储一顶点指针及它与相应邻点的坍缩代价,另有一时间戳.
 堆元素按照坍缩代价保持堆性质,坍缩一对顶点后更新了附近顶点的最优代价,就将新的值打上新的时间戳压入堆中,
-而取堆顶元素时,若发现其不是最新就抛弃.这样就可以替代修改操作.
+而取堆顶元素时,若发现其不是最新就抛弃.这样就可以替代修改操作.见\verb|include/mesh_simplifier.hh, mesh_simplifier.cc|
+
+对于20万面片的龙模型\footnote{models/fixed.perfect.dragon.100K.0.07.obj},
+简化掉80\%的面片需要2.37s, 而不用堆加速时需要55s.效果见\figref{simplify}.
 
 \subsection{多线程}
 \begin{enumerate}
-  \item 对生成图片中每个像素
+  \item 对生成图片中每个像素,显然其计算相互独立,使用openmp对其进行多线程优化.
+
+  \item 建树时,两子树的创建可以并行执行.
+    测试表明对根节点的两子节点并行建树有效,而对深层节点并行建树得不偿失.
+    另外,建树中有一步需对各物体每一维度上的坐标排序,这是效率的瓶颈所在.
+    不同维度的排序可以并行执行,经测试也只对根节点比较有效.
+    这两处并行都使用\verb|std::future|实现,效率提升了约30\%.
+
+  \item 网格简化中,对各节点代价的更新可以并行完成,效率略有提高.
 \end{enumerate}
