add proj outline

--- a/report/algo.tex
+++ b/report/algo.tex
@@ -1,5 +1,5 @@
 % File: algo.tex
-% Date: Fri Jun 21 02:11:20 2013 +0800
+% Date: Fri Jun 21 02:22:19 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{算法说明}
 \subsection{光线追踪及光照模型}
@@ -143,8 +143,12 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 屏幕同一位置发射光线并执行光线追踪,以各样本平均值作为最终颜色.
 这样就可以使得焦平面上物体清晰,而其余位置模糊.
 
+
 \verb|main.cc|中的\verb|dof_ball_scene()|生成一个演示景深的场景,场景中
 可通过键盘控制焦平面位置,详见\secref{navigate}.demo目录中有景深的演示视频.
+
+随机取点会造成焦平面以外有无规律噪点,在生成视频后会比较明显,
+因而对输出图像统一做了高斯模糊,使噪点不太明显.
 
 \subsection{小量处理}
 在如下情形需要特别注意实数运算中的误差.
