--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 % $File: report.tex
-% $Date: Fri Jun 21 00:53:42 2013 +0800
+% $Date: Fri Jun 21 02:23:15 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
@@ -78,7 +78,7 @@ basicstyle=\footnotesize\ttfamily}
 
 \input{intro}
 \input{algo}
-\input{proj}
+\input{design}
 \input{diary}
 \printbibliography
 
