--- a/report/algo.tex
+++ b/report/algo.tex
@@ -1,5 +1,5 @@
 % File: algo.tex
-% Date: Fri Jun 21 02:22:19 2013 +0800
+% Date: Fri Jun 21 10:26:30 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{算法说明}
 \subsection{光线追踪及光照模型}
@@ -55,6 +55,7 @@ $ \overrightarrow{V}$为视点到表面交点处的向量.
 \subsection{视图模型}
 一个视图应包括视点及屏幕,且应使视点在屏幕的中轴线上.
 视图类\verb|View|存储了视点坐标,屏幕中心坐标,屏幕尺寸,屏幕边沿的空间指向,
+并保证视点到屏幕中心的连线与屏幕边沿指向垂直.
 这样可以方便的进行视图旋转,视图平移,缩放等导航操作.见\verb|include/view.hh, view.cc|
 
 \subsection{KD树}
@@ -92,14 +93,14 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 
 由表可见SAH建树的查询效率有很大提高,但建树缓慢. 建树效率与渲染效率之间存在trade-off,可以通过改变终止条件来调整.
 
-另外,不使用KD树时,视角1渲染时间约为800s.(不使用KD树时各像素所需时间大致相同,可由此估算总时间).
+另外,不使用KD树时,视角1渲染时间约为800s.(不使用KD树时各像素所需时间大致相同,可由部分渲染时间估算总时间).
 
 \subsubsection{求交}
-求交的基本方法为,递归寻找两子树的最近\underline{物体}的交点,取较近者为结果返回.
+求交的基本方法为,递归寻找两子树中最近\underline{物体}的交点,取较近者为结果返回.
 
 实现时,在每个节点处保存了当前节点的两个孩子的切分平面,这样可以预先判断出离
 光线较近的包围盒,若与其内物体相交则不用考虑另一包围盒.
-使用此方法应注意,若光线与第一个包围盒所管理的物体相交,应确认与最近物体的交点是否被第一个包围盒\underline{包含}.
+使用此方法应注意,若光线与较近包围盒所管理的物体相交,应确认与最近物体的交点是否被较近包围盒\underline{包含}.
 因为若不包含,则光线首先打到的物体可能并不是此物体,而是第二个包围盒管理的物体.
 
 \subsection{纹理}
@@ -116,13 +117,13 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 法向插值可以使三角网格表面更光滑,只需找到一个面片上的连续函数,就可以得到较好的效果.
 此程序采用了线性插值.
 
-在读入网格数据后,令各点法向为其相邻各面法向的平均.
-在面片与光线求交后,根据交点的重心坐标即可利用面片顶点的法向插值出交点法向.
+在读入网格数据后,令各顶点法向为其相邻各面法向的平均.
+在面片与光线求交后,根据交点的重心坐标及面片顶点的法向,即可插值出交点法向.
 效果见\figref{smooth}, \figref{simplify}.
 
 \subsection{抗锯齿}
 \begin{enumerate}
-  \item 使用Beer-Lambert定律\cite{beer},使得光想亮度按传播距离指数衰减,可以有效消除远处纹理密集处的畸形.
+  \item 使用Beer-Lambert定律\cite{beer},使得光线亮度按传播距离指数衰减,可以有效消除远处纹理密集处的畸形.
     见\figref{first}与\figref{beer}的对比.
 
   \item 使用全屏抗锯齿(FSAA),对图片整体应用卷积盒$\begin{bmatrix}1 & 2 & 1\\2 & 4 & 2\\1 & 2 & 1\end{bmatrix} $,
@@ -137,10 +138,10 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 即可实现软阴影.效果如\figref{soft}所示. 实现见\verb|Space::add_light()|.
 
 \subsection{景深}
-程序中景深\footnote\url{http://en.wikipedia.org/wiki/Depth\_of\_field}
+程序中景深\footnote{\url{http://en.wikipedia.org/wiki/Depth\_of\_field}}
 的实现方法为,以焦平面作为屏幕,取焦平面与视点之间某处建一感光器平面.
-对视点到焦平面的每条光线,取其与感光器的交点,在交点周围随机采多个样本点向
-屏幕同一位置发射光线并执行光线追踪,以各样本平均值作为最终颜色.
+对视点到焦平面的每条光线,在其与感光器的交点周围随机采多个样本点,以这些样本点为观察点向
+屏幕同一位置发射光线并执行光线追踪,以各样本点颜色的平均值作为最终颜色.
 这样就可以使得焦平面上物体清晰,而其余位置模糊.
 
 
@@ -161,8 +162,8 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 
   \item 平行判定
 
-    判定直线与面片或平面是否平行时,利用向量点乘绝对值$<$EPS判定,
-    否则可能导致交点坐标出现无穷大.
+    判定直线与面片或平面是否平行时,利用直线与法线点乘的绝对值$<$EPS判定,
+    否则可能导致交点坐标过大.
 
   \item KD树
 
@@ -183,7 +184,7 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 对每个顶点,维护它相邻顶点中最适合坍缩的顶点指针.
 堆元素存储一顶点指针及它与相应邻点的坍缩代价,另有一时间戳.
 堆元素按照坍缩代价保持堆性质,坍缩一对顶点后更新了附近顶点的最优代价,就将新的值打上新的时间戳压入堆中,
-而取堆顶元素时,若发现其不是最新就抛弃.这样就可以替代修改操作.见\verb|include/mesh_simplifier.hh, mesh_simplifier.cc|
+而取堆顶元素时,若从时间戳发现其不是最新就抛弃.这样就可以替代修改操作.见\verb|include/mesh_simplifier.hh, mesh_simplifier.cc|
 
 对于20万面片的龙模型\footnote{models/fixed.perfect.dragon.100K.0.07.obj},
 简化掉80\%的面片需要2.37s, 而不用堆加速时需要55s.效果见\figref{simplify}.
@@ -194,9 +195,9 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 
   \item 建树时,两子树的创建可以并行执行.
     测试表明对根节点的两子节点并行建树有效,而对深层节点并行建树得不偿失.
-    另外,建树中有一步需对各物体每一维度上的坐标排序,这是效率的瓶颈所在.
+    另外,$O(\log^2 n)$的建树中有一步需对各物体每一维度上的坐标排序,这是效率的瓶颈所在.
     不同维度的排序可以并行执行,经测试也只对根节点比较有效.
-    这两处并行都使用\verb|std::future|实现,效率提升了约30\%.
+    这两处并行都使用C++11的\verb|std::future|实现,效率提升了约30\%.
 
   \item 网格简化中,对各节点代价的更新可以并行完成,效率略有提高.
 \end{enumerate}
