--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 % $File: report.tex
-% $Date: Fri Jun 21 02:23:15 2013 +0800
+% $Date: Fri Jun 21 10:16:23 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
@@ -75,6 +75,7 @@ basicstyle=\footnotesize\ttfamily}
 
 \input{title}
 \titleformat*{\section}{\centering\Large\bf}
+\tableofcontents
 
 \input{intro}
 \input{algo}
