--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 % $File: report.tex
-% $Date: Fri Jun 21 10:16:23 2013 +0800
+% $Date: Fri Jun 21 18:27:26 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
@@ -7,6 +7,7 @@
 \usepackage{fontspec,amsmath,amssymb,zhspacing,verbatim,minted,listings,zhmath}
 \usepackage{titlesec, titletoc}
 \usepackage{threeparttable}
+\usepackage{dirtree}
 \usepackage{enumerate}
 \usepackage[hyperfootnotes=false,colorlinks,linkcolor=blue,anchorcolor=blue,citecolor=blue]{hyperref}
 \usepackage[sorting=none]{biblatex}
