--- a/report/design.tex
+++ b/report/design.tex
@@ -1,5 +1,5 @@
 % File: design.tex
-% Date: Fri Jun 21 18:52:34 2013 +0800
+% Date: Fri Jun 21 19:10:59 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 
 \section{项目设计}
@@ -13,10 +13,10 @@
 .3 include/\DTcomment{头文件}.
 .4 geometry/\DTcomment{实现抽象几何对象}.
 .4 renderable/\DTcomment{定义可渲染几何对象}.
-.4 lib/\DTcomment{程序使用的辅助功能定义}.
+.4 lib/\DTcomment{程序使用的辅助函数定义}.
 .4 material/\DTcomment{实现表面属性及纹理}.
 .4 render/\DTcomment{定义图像渲染}.
-.3 lib/\DTcomment{辅助功能的实现}.
+.3 lib/\DTcomment{辅助函数的实现}.
 .4 debugutils.cc.
 .4 utils.cc.
 .4 imagereader.cc.
